actualizacion eventos sprint 1

--- a/SIGECU/web/WEB-INF/web.xml
+++ b/SIGECU/web/WEB-INF/web.xml
@@ -5,11 +5,11 @@
 	 xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	 version="3.1">
     <servlet>
-        <servlet-name>crearEvento</servlet-name>
-        <servlet-class>servlet.crearEvento</servlet-class>
+        <servlet-name>ServletEvento</servlet-name>
+        <servlet-class>controlador.ServletEvento</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>crearEvento</servlet-name>
-        <url-pattern>/crearEvento.do</url-pattern>
+        <servlet-name>ServletEvento</servlet-name>
+        <url-pattern>/ServletEvento</url-pattern>
     </servlet-mapping>
 </web-app>
