--- a/SIGECU/nbproject/project.properties
+++ b/SIGECU/nbproject/project.properties
@@ -29,6 +29,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.javax.mail.jar=libs\\javax.mail.jar
+file.reference.javax.mail.jar-1=E:\\SIGECU\\libs\\javax.mail.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -40,7 +41,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.javax.mail.jar}:\
     ${libs.jstl.classpath}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.javax.mail.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
