--- a/SIGECU/nbproject/project.properties
+++ b/SIGECU/nbproject/project.properties
@@ -39,10 +39,10 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.javax.mail.jar}:\
     ${libs.jstl.classpath}:\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.javax.mail.jar-1}
+    ${file.reference.javax.mail.jar-1}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
