--- a/SIGECU/nbproject/project.properties
+++ b/SIGECU/nbproject/project.properties
@@ -30,6 +30,7 @@ endorsed.classpath=\
 excludes=
 file.reference.javax.mail.jar=libs\\javax.mail.jar
 file.reference.javax.mail.jar-1=E:\\SIGECU\\libs\\javax.mail.jar
+file.reference.log4j-1.2.17.jar=libs\\log4j-1.2.17.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -42,7 +43,8 @@ javac.classpath=\
     ${libs.jstl.classpath}:\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.javax.mail.jar-1}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.log4j-1.2.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
