--- a/SIGECU/web/WEB-INF/web.xml
+++ b/SIGECU/web/WEB-INF/web.xml
@@ -4,5 +4,80 @@
 	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	 xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	 version="3.1">
+    
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>/publico/*</welcome-file>
+    </welcome-file-list>
+
+    <security-constraint>
+	<display-name>ACCESO SOLO A COMERCIAL</display-name>
+	<web-resource-collection>
+            <web-resource-name>ZonaComercial</web-resource-name>
+            <url-pattern>/vistas/comercial/*</url-pattern>
+	</web-resource-collection>
+	<auth-constraint>
+		<role-name>comercial</role-name>
+	</auth-constraint>
+    </security-constraint>
+    
+    <security-constraint>
+	<display-name>ACCESO SOLO A ALUMNOS</display-name>
+	<web-resource-collection>
+		<web-resource-name>ZonaAlumnos</web-resource-name>
+		<url-pattern>/vistas/alumno/*</url-pattern>
+	</web-resource-collection>
+	<auth-constraint>
+		<role-name>alumno</role-name>
+	</auth-constraint>
+    </security-constraint>
+    
+    <security-constraint>
+	<display-name>ACCESO SOLO A GERTOR DE FINANZAS</display-name>
+	<web-resource-collection>
+		<web-resource-name>ZonaGestorFinanzas</web-resource-name>
+		<url-pattern>/vistas/gestorFinanzas/*</url-pattern>
+	</web-resource-collection>
+	<auth-constraint>
+		<role-name>gestorFinanzas</role-name>
+	</auth-constraint>
+    </security-constraint>
+    
+    
+    <security-role>
+        <role-name>comercial</role-name>
+    </security-role>
+    <security-role>
+        <role-name>alumno</role-name>
+    </security-role>
+    <security-role>
+        <role-name>gestorFinanzas</role-name>
+    </security-role>
+    
+    
+    <login-config>
+	<auth-method>FORM</auth-method>
+	<form-login-config>
+            <form-login-page>/login.jsp</form-login-page>
+            <form-error-page>/login.jsp</form-error-page>
+	</form-login-config>
+    </login-config>
+    
+    
+    <servlet>
+        <servlet-name>ServletPerfil</servlet-name>
+        <servlet-class>controlador.ServletPerfil</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ServletPerfil</servlet-name>
+        <url-pattern>/ServletPerfil</url-pattern>
+    </servlet-mapping>
+ 
+    <resource-ref>
+        <description>MySQL DataSource</description>
+        <res-ref-name>jdbc/SIGECU</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
 
 </web-app>
