--- a/SIGECU/web/WEB-INF/web.xml
+++ b/SIGECU/web/WEB-INF/web.xml
@@ -23,6 +23,7 @@
         <web-resource-collection>
             <web-resource-name>ZonaAlumnos</web-resource-name>
             <url-pattern>/vistas/alumno/*</url-pattern>
+            <url-pattern>/preInscripcion</url-pattern>
         </web-resource-collection>
         <auth-constraint>
             <role-name>alumno</role-name>
