--- a/SIGECU/web/WEB-INF/web.xml
+++ b/SIGECU/web/WEB-INF/web.xml
@@ -52,7 +52,7 @@
         <auth-method>FORM</auth-method>
         <form-login-config>
             <form-login-page>/login.jsp</form-login-page>
-            <form-error-page>/login.jsp</form-error-page>
+            <form-error-page>/login_.jsp</form-error-page>
         </form-login-config>
     </login-config>
     <servlet>
