--- a/SIGECU/web/WEB-INF/web.xml
+++ b/SIGECU/web/WEB-INF/web.xml
@@ -24,6 +24,7 @@
             <web-resource-name>ZonaAlumnos</web-resource-name>
             <url-pattern>/vistas/alumno/*</url-pattern>
             <url-pattern>/ServletPreInscripcionEvento</url-pattern>
+            <url-pattern>/ServletListaPagos</url-pattern>
         </web-resource-collection>
         <auth-constraint>
             <role-name>alumno</role-name>
